@@ -19,7 +19,7 @@
                   <pauseatend>10000</pauseatend>
                   <randomize>true</randomize>
                   <loop>yes</loop>
-                  <aspectratio>stretch</aspectratio>
+                  <aspectratio>scale</aspectratio>
             </control>
             <control type="image">
                 <include>dimensionsFullscreen</include>
